# MLOps-course

./: .gitignore  1.FastAPI Fundamentals.py  1_Interpretability of models with SHAP.ipynb  1_Pycaret Fundamentals.ipynb  2. FastAPI_postmethodPydantic.py  2_Regression Models with Pycaret.ipynb  2_SHAP_Regression Models with Pycaret.ipynb  3_Production_Regression Models with Pycaret.ipynb  MLOps_with_Pycaret_and_DagsHub.ipynb  Makefile  README.md  artifacts.dvc  dashboard.html  data.dvc  diamond-pipeline.pkl  diamond_new_data.csv  main.py  main_gitflow.py  metrics.csv  outputs.dvc  pyproject.toml  requirements.txt  rf_base_traffic.pkl
.dvc/: config
3_API_for_Scikit-learn_Model/: iris_model.pkl
4_API_from_Pycaret_pipeline/: API with Pycaret and FastAPI.ipynb  diamond-pipeline.pkl  pycaret_app.py  requirements.txt
MLFlow/: 1_Model registration and versioning with MLFlow.ipynb
Pycaret/: 2_Regression Models with Pycaret.ipynb
exercise/: 1_data_download.ipynb  2_Churn_model_development.ipynb
learn-mlops/: README.md  pyproject.toml
test-poetry/: pyproject.toml
