[tool.poetry]
name = "test-poetry"
version = "0.1.0"
description = ""
authors = ["SuThanhCong <suwuanxan@gmail.com>"]
readme = "README.md"
packages = [{include = "test_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
